--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,3 +64,17 @@
 .text-purple {
     color: #800080 !important;
 }
+.image-cropper {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+.profile-pic {
+    display: inline;
+    margin: 0 auto;
+    margin-left: -25%;
+    height: 100%;
+    width: auto;
+}
